--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Instalación de Surge
       run: npm install --global surge
     - name: Desplegar la App
-      run: surge ./dist somber-throat.surge.sh --token f364c30728138d1e11a91374f4a871ca
+      run: surge ./dist ${{vars.DOMAIN}} --token ${{secrets.TOKEN}}
