--- a/.github/workflows/master_appprueba.yml
+++ b/.github/workflows/master_appprueba.yml
@@ -61,5 +61,5 @@ jobs:
         with:
           app-name: 'appprueba'
           slot-name: 'Production'
-          package: .
+          package: './dist'
           
