--- a/.github/workflows/master_appprueba.yml
+++ b/.github/workflows/master_appprueba.yml
@@ -60,4 +60,4 @@ jobs:
         with:
           app-name: 'appprueba'
           slot-name: 'Production'
-          package: './react-app'
+          package: './reactdevops'
