--- a/.github/workflows/master_appprueba.yml
+++ b/.github/workflows/master_appprueba.yml
@@ -1,8 +1,5 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
 
-
-name: Build and deploy React app to Azure Web App - appprueba
+name: Build and deploy Vite React app to Azure Web App - reactdevops
 
 on:
   push:
@@ -32,7 +29,7 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: react-app
+          name: vite-app
           path: ./dist
 
   deploy:
@@ -46,7 +43,7 @@ jobs:
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
-          name: react-app
+          name: vite-app
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -58,6 +55,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'appprueba'
+          app-name: 'reactdevops'
           slot-name: 'Production'
-          package: .
+          package: './vite-app'
